samples/_failures_safe/1761274774_19a99a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4b2a968.c: In function ‘main’:
./samples/SAFE/__tmp_e4b2a968.c:146:29: error: expected ‘)’ at end of input
  146 |         free(compressed.data
      |             ~               ^
      |                             )
./samples/SAFE/__tmp_e4b2a968.c:146:9: error: expected declaration or statement at end of input
  146 |         free(compressed.data
      |         ^~~~
./samples/SAFE/__tmp_e4b2a968.c:146:9: error: expected declaration or statement at end of input
